  * `rdoc --pipe` output now contains <code></code> for markdown compliance.
  * RDoc no longer leaves emacs-style modelines in .txt, .md or .rd files.
    Bug #178 by Zachary Scott
  * RDoc no longer puts raw markup in HTML output for markdown input.  Bug
    #204 by Erik Hollensbe
  * Code objects with nodoc are no longer included in the ri store.  Bug #177
    by Thomas Leitner.

=== 4.0.0 / 2013-02-24

RDoc 4.0 includes several new features and several breaking changes.  The
changes should not affect users of `rdoc` or `ri`.

Notable feature additions are markdown support and an WEBrick servlet that can
serve HTML from an ri store.  (This means that RubyGems 2.0+ no longer needs
to build HTML documentation when installing gems.)

Changes since RDoc 3.12.1:

* Breaking changes
  * The default output encoding for RDoc is now UTF-8.  Previously RDoc used
    the default external encoding which was determined from your locale.
    Issue #106 by Justin Baker.
  * RDoc::RI::Store is now RDoc::Store so ri data generated by RDoc 4 cannot
    be read by earlier versions of RDoc.  RDoc::RI::Store exists as an alias
    of RDoc::Store so ri data from older versions can still be read.
    RDoc::RI::Store will be removed in RDoc 5.

    Tests that create RDoc::CodeObjects on the fly without wiring them into
    the documentation tree (did not use add_class, add_method, etc.) must be
    updated to use these methods.  The documentation tree automatically
    attaches them to the store instance which allows lookups to work
    correctly.  Additionally, a new method RDoc::Store#add_file must be used
    instead of RDoc::TopLevel.new.  The latter will not be attached to the
    documentation tree.
  * RDoc generators must accept an RDoc::Store and an RDoc::Options in
    initialize.  RDoc no longer passes an Array of RDoc::TopLevel objects to
    #generate.  Use RDoc::Store#all_files instead.
  * Some markup formatters (RDoc::Markup::To*) now accept an RDoc::Options